# sdd-github-back

./: .env.example  .gitignore  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
app/: config.py  database.py  main.py
app/auth/: deps.py  router.py  service.py
app/models/: auth.py  cash.py  common.py  enums.py  game.py  transaction.py
app/routes/: cash.py  games.py  transactions.py
app/services/: cash_service.py  game_service.py  transfer_service.py
specs/001-api-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-api-core/checklists/: requirements.md
specs/001-api-core/contracts/: api-endpoints.md
